codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__remote_image_rows_after_delete_first.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"  [Image #1]                                                                                        "
"                                                                                                    "
"┃ describe these                                                                                    "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"                                                                                                    "
"                                                                                 100% context left  "
